# tidydir

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP_INSTRUCTIONS.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
docs/: index.md
scripts/: check_code.py  confirm_success.py  debug_subdirs.py  final_fixes.py  fix_all_linting.py  fix_duplicate_extensions.py  fix_everything.py  quick_ci_fix.bat  run_tests.bat  run_tests.sh  verify_setup.py
src/tidydir/: __init__.py  categories.py  cli.py  organizer.py  py.typed
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_organizer.py
